store today's theme and switch to appropriate theme based on past wrap theme or today's theme if viewing from profile

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,6 +39,28 @@
             animation: popIn 1250ms ease-in-out 625ms forwards infinite;
         }
 
+        .christmas {
+
+        }
+
+        .halloween {
+            margin-top: 15px;
+        }
+
+        .halloween-button {
+            background-color: #E9C999;
+            color: #875e0b;
+        }
+
+        .christmas {
+            margin-top: 15px;
+        }
+
+        .christmas-button {
+            background-color: #E99F99;
+            color: #a62e25;
+        }
+
     </style>
 
     <div class="note-icons">
@@ -62,8 +84,8 @@
          </a>
     </div>
 
-    <div class="button-wrapper">
-        <a href="{% url 'halloween_transition_one' %}" class="view-unwrapped">
+    <div class="button-wrapper halloween">
+        <a href="{% url 'halloween_transition_one' %}" class="view-unwrapped halloween-button">
             {% if language == "english" %}
                 VIEW HALLOWEEN UNWRAPPED
             {% elif language == "hindi" %}
@@ -74,8 +96,8 @@
          </a>
     </div>
 
-    <div class="button-wrapper">
-        <a href="{% url 'christmas_transition_one' %}" class="view-unwrapped">
+    <div class="button-wrapper christmas">
+        <a href="{% url 'christmas_transition_one' %}" class="view-unwrapped christmas-button">
             {% if language == "english" %}
                 VIEW CHRISTMAS UNWRAPPED
             {% elif language == "hindi" %}
