bug fix for christmas graph view and changed monthly trends to current trends

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -421,11 +421,11 @@
                     </div>
                     <div class="jukebox-label">
                         {% if language == "english" %}
-                            MONTHLY TRENDS
+                            CURRENT TRENDS
                         {% elif language == "hindi" %}
-                            मासिक रुझान
+                            वर्तमान रुझान
                         {% elif language == "mandarin" %}
-                            月度趋势
+                            当前趋势
                         {% endif %}
                     </div> 
                 </div>
