put login/register buttons in rectangular box

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -303,6 +303,7 @@
         #feedback-section {
             position: absolute;
             top: 670px;
+            margin-bottom: 20px;
         }
 
         .message {
