--- a/templates/login.html
+++ b/templates/login.html
@@ -66,6 +66,7 @@
             justify-content: center;
             gap: 20px;
             margin-top: 50px;
+            margin-bottom: 30px;
             height: 40px;
         }
 
@@ -262,6 +263,17 @@
             color: #008000;
         }
 
+        body.dark-mode .login-container {
+            outline: 2px #c1c1c1 dashed;
+        }
+
+        .login-container {
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border: 1px solid black;
+        }
+
         @media (max-width: 768px) {
             .blue-header h1 {
                 font-size: 32px;
@@ -343,6 +355,8 @@
             <span class="music-note">♬</span>
         </div>
 
+        <div class = "login-container">
+
         <form method="POST" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="form-group">
@@ -409,6 +423,7 @@
                 {% endif %}
             </button>
         </div>
+    </div>
     {% endblock %}
 </body>
 </html>
