fixed transition buttons for halloween/christmas

--- a/templates/christmas_seasonal.html
+++ b/templates/christmas_seasonal.html
@@ -397,16 +397,16 @@
         <div class="small-record small-record6"></div>
     </div>
 
-    <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
 
+    <a href="{% url 'christmas_ads' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    </a>
 
     <div class="circle-container">
         <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="darker-small-circle"></div>
-        <div class="small-circle"></div>
-        <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="small-circle"></div>
     </div>
