--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -246,6 +246,25 @@
             </div>
         </div>
     </div>
+    
+    <a href="{% url 'transition_two' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    </a>
+
+
+    <div class="circle-container">
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="darker-small-circle"></div>
+    </div>
+
+    <a href="{% url 'christmas_ads' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
+    </a>
+
     {% endblock %}
 </body>
 </html>
