made a halloween transition two page

--- a/templates/halloween_llm.html
+++ b/templates/halloween_llm.html
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-    <a href="{% url 'transition_two' %}">
+    <a href="{% url 'halloween_transition_two' %}">
         <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
     </a>
 
