--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -247,7 +247,7 @@
         </div>
     </div>
     
-    <a href="{% url 'transition_two' %}">
+    <a href="{% url 'christmas_transition_two' %}">
         <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
     </a>
 
