--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -214,6 +214,51 @@
         }
     </style>
 
+        <script>
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const container = document.getElementById('main-container');
+            sidebar.classList.toggle('active');
+            container.classList.toggle('sidebar-active');
+        }
+
+        document.getElementById('dark-mode-btn').onclick = function () {
+            document.body.classList.toggle('dark-mode');
+
+            if (document.body.classList.contains('dark-mode')) {
+                localStorage.setItem('dark_mode', 'on');
+                console.log('dark mode on');
+            } else {
+                localStorage.setItem('dark_mode', 'off');
+                console.log("dark mode off");
+                console.log(localStorage.getItem('dark_mode'));
+            }
+
+            const rainbows = document.getElementsByClassName('rainbow');
+            const dark_mode = localStorage.getItem('dark_mode') === 'on';
+            if (dark_mode) {
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/snowflake.png' %}";
+                }
+            } else {
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/snowflake.png' %}";
+                }
+            }
+        };
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const rainbows = document.getElementsByClassName('rainbow');
+            if (localStorage.getItem('dark_mode') === 'on') {
+                document.body.classList.add('dark-mode');
+                console.log('dark mode on');
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/snowflake.png' %}"
+                }
+            }
+        });
+    </script>
+
     <img src="{% static 'slide_2/snowflake.png' %}" alt="Rainbow" class="top-left rainbow">
     <img src="{% static 'slide_2/snowflake.png' %}" alt="Rainbow" class="bottom-right rainbow">
     <!-- Page Title -->
