--- a/templates/halloween_night.html
+++ b/templates/halloween_night.html
@@ -198,6 +198,58 @@
 
         </style>
 
+
+
+
+
+    <script>
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const container = document.getElementById('main-container');
+            sidebar.classList.toggle('active');
+            container.classList.toggle('sidebar-active');
+        }
+
+        document.getElementById('dark-mode-btn').onclick = function () {
+            document.body.classList.toggle('dark-mode');
+
+            if (document.body.classList.contains('dark-mode')) {
+                localStorage.setItem('dark_mode', 'on');
+                console.log('dark mode on');
+            } else {
+                localStorage.setItem('dark_mode', 'off');
+                console.log("dark mode off");
+                console.log(localStorage.getItem('dark_mode'));
+            }
+
+            const rainbows = document.getElementsByClassName('rainbow');
+            const dark_mode = localStorage.getItem('dark_mode') === 'on';
+            if (dark_mode) {
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/spider_web.png' %}";
+                }
+            } else {
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/spider_web.png' %}";
+                }
+            }
+        };
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const rainbows = document.getElementsByClassName('rainbow');
+            if (localStorage.getItem('dark_mode') === 'on') {
+                document.body.classList.add('dark-mode');
+                console.log('dark mode on');
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/spider_web.png' %}"
+                }
+            }
+        });
+    </script>
+
+
+
+
         <img src="{% static 'slide_2/spider_web.png' %}" alt="Rainbow" class="top-left rainbow">
         <img src="{% static 'slide_2/spider_web.png' %}" alt="Rainbow" class="bottom-left rainbow">
 
@@ -207,7 +259,7 @@
                 const rainbows = document.getElementsByClassName('rainbow');
                 if (dark_mode) {
                     for (let i = 0; i < rainbows.length; i++) {
-                        rainbows[i].src = "{% static 'slide_3/dark_mode_rainbow.png' %}"
+                        rainbows[i].src = "{% static 'slide_2/spider_web.png' %}"
                     }
                 }
             });
@@ -385,7 +437,7 @@
                     const dark_mode = localStorage.getItem('dark_mode') === 'on';
                     if (dark_mode) {
                         for (let i = 0; i < rainbows.length; i++) {
-                            rainbows[i].src = "{% static 'slide_2/dark_mode_rainbow.png' %}";
+                            rainbows[i].src = "{% static 'slide_2/spider_web.png' %}";
                         }
 
                         hoursBarGraph.options.scales.xAxes[0].ticks.fontColor = '#a8a6a6';
