changed nav bar for christmas

--- a/templates/christmas_ads.html
+++ b/templates/christmas_ads.html
@@ -45,7 +45,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            color: red;
+            color: orangered;
             padding: 0 40px;
             position: fixed;
             top: 0;
@@ -61,7 +61,7 @@
         .title {
             font-size: 36px;
             font-weight: bold;
-            color: red;
+            color: orangered;
             text-shadow:
                 -1px -1px 0 #C64036,
                 1px -1px 0 #C64036,
