--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -41,7 +41,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            color: red;
+            color: orangered;
             padding: 0 40px;
             position: fixed;
             top: 0;
@@ -50,14 +50,14 @@
         }
 
         .menu-icon {
-            color: red;
+            color: orangered;
             font-size: 65px;
         }
 
         .title {
             font-size: 36px;
             font-weight: bold;
-            color: red;
+            color: orangered;
             text-shadow:
                 -1px -1px 0 #C64036,
                 1px -1px 0 #C64036,
