--- a/templates/christmas_night.html
+++ b/templates/christmas_night.html
@@ -42,7 +42,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            color: red;
+            color: orangered;
             padding: 0 40px;
             position: fixed;
             top: 0;
@@ -58,7 +58,7 @@
         .title {
             font-size: 36px;
             font-weight: bold;
-            color: red;
+            color: orangered;
             text-shadow:
                 -1px -1px 0 #C64036,
                 1px -1px 0 #C64036,
