show page titles in halloween dark mode

--- a/templates/halloweenone.html
+++ b/templates/halloweenone.html
@@ -101,6 +101,10 @@
             margin-top: 20px;
         }
 
+        body.dark-mode .page-title {
+            color: white;
+        }
+
         /* Layout for Artist and Songs Side by Side */
         .content-sections {
             display: flex;
