--- a/templates/halloween_llm.html
+++ b/templates/halloween_llm.html
@@ -81,6 +81,10 @@
             margin-top: 10px;
         }
 
+        body.dark-mode .page-title {
+            color: white;
+        }
+
         /* Layout for Artist and Songs Side by Side */
         .content-sections {
             display: flex;
