fixed title in halloween dark mode graph

--- a/templates/halloween_graph.html
+++ b/templates/halloween_graph.html
@@ -99,6 +99,10 @@
            flex-grow: 1;
        }
 
+       body.dark-mode .slide-title {
+            color: white;
+       }
+
        .chart-and-artists {
            display: flex;
            flex-direction: row;
