updated llm pages

--- a/templates/halloween_llm.html
+++ b/templates/halloween_llm.html
@@ -262,7 +262,7 @@
     <img src="{% static 'slide_2/spider_web.png' %}" alt="Rainbow" class="bottom-right rainbow">
     <!-- Page Title -->
     <div class="page-title">
-        <h1>LLM Insights</h1>
+        <h1>Your Personality Insights Based on Your Music Taste</h1>
     </div>
 
     <!-- Content Sections for Top Artist and Top Songs -->
