--- a/templates/christmas_transition_one.html
+++ b/templates/christmas_transition_one.html
@@ -37,6 +37,41 @@
         background: #FCF8F1;
     }
 
+        /* Fixed Header */
+        .header {
+            width: 100%;
+            height: 100px;
+            background-color: darkgreen;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: orangered;
+            padding: 0 40px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .menu-icon {
+            color: orangered;
+            font-size: 65px;
+        }
+
+        .title {
+            font-size: 36px;
+            font-weight: bold;
+            color: orangered;
+            text-shadow:
+                -1px -1px 0 #C64036,
+                1px -1px 0 #C64036,
+                -1px 1px 0 #C64036,
+                1px 1px 0 #C64036;
+            text-align: center;
+            flex-grow: 1;
+        }
+
+
     .main-container {
         min-height: calc(100vh - 64px);
         width: 100%;
