changed hallowen and christmas nav bar for transition pages.

--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -263,7 +263,7 @@
     <img src="{% static 'slide_2/snowflake.png' %}" alt="Rainbow" class="bottom-right rainbow">
     <!-- Page Title -->
     <div class="page-title">
-        <h1>Your Personality Insights Based on Your Music Taste</h1>
+        <h1>Personality Insights Based on Your Music Taste</h1>
     </div>
 
     <!-- Content Sections for Top Artist and Top Songs -->
