--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -217,7 +217,7 @@
     <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="bottom-right rainbow">
     <!-- Page Title -->
     <div class="page-title">
-        <h1>Your Personality Insights Based on Your Music Taste</h1>
+        <h1>Personality Insights Based on Your Music Taste</h1>
     </div>
 
     <!-- Content Sections for Top Artist and Top Songs -->
