--- a/templates/base.html
+++ b/templates/base.html
@@ -306,7 +306,7 @@
                 <a href="{% url 'slide_3' %}">Listening Times</a>
                 <a href="{% url 'analyze_seasonal_mood' %}">Seasonal Mood</a>
                 <a href="{% url 'ads_minutes' %}">Analyzing Ads</a>
-                <a href="{% url 'llm_insights_page' %}">LLM Insights</a>
+                <a href="{% url 'llm_insights_page' %}">Insights</a>
                 <a href="{% url 'game' %}">Game</a>
                 <hr>
                 <a href="{% url 'contact' %}">Contact</a>
@@ -319,7 +319,7 @@
                 <a href="{% url 'slide_3' %}">सुनने का समय</a>
                 <a href="{% url 'analyze_seasonal_mood' %}">मौसमी मूड</a>
                 <a href="{% url 'ads_minutes' %}">विज्ञापनों का विश्लेषण</a>
-                <a href="{% url 'llm_insights_page' %}">एलएलएम अंतर्दृष्टि</a>
+                <a href="{% url 'llm_insights_page' %}">अंतर्दृष्टि</a>
                 <a href="{% url 'game' %}">खेल</a>
                 <hr>
                 <a href="{% url 'contact' %}">संपर्क करें</a>
@@ -332,7 +332,7 @@
                 <a href="{% url 'slide_3' %}">收听时间</a>
                 <a href="{% url 'analyze_seasonal_mood' %}">季节情绪</a>
                 <a href="{% url 'ads_minutes' %}">广告分析</a>
-                <a href="{% url 'llm_insights_page' %}">LLM 洞察</a>
+                <a href="{% url 'llm_insights_page' %}">见解</a>
                 <a href="{% url 'game' %}">游戏</a>
                 <hr>
                 <a href="{% url 'contact' %}">联系</a>
