Changed width of title on insights page

--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -78,6 +78,7 @@
             margin-bottom: 20px;
             text-align: center;
             margin-top: 10px;
+            max-width: 900px;
         }
 
         body.dark-mode .page-title {
