--- a/templates/past_wraps.html
+++ b/templates/past_wraps.html
@@ -21,6 +21,8 @@
 
         body {
             overflow: hidden;
+            margin: 0;
+            padding: 0;
         }
 
         .top-left {
