--- a/templates/slide_2.html
+++ b/templates/slide_2.html
@@ -200,7 +200,7 @@
                                 },
                                 scaleLabel: {
                                     display: true,
-                                    labelString: "Ranking",
+                                    labelString: rankingLabel,
                                     fontFamily: 'Notable',
                                     fontColor: dark_mode ? "#a8a6a6" : "#473924",
                                     fontSize: 21,
