--- a/templates/halloween_graph.html
+++ b/templates/halloween_graph.html
@@ -189,7 +189,15 @@
         <img src="{% static 'slide_2/spider_web.png' %}" alt="Rainbow" class="top-left rainbow">
         <img src="{% static 'slide_2/spider_web.png' %}" alt="Rainbow" class="bottom-right rainbow">
 
-        <div class="slide-title">Your Top 3 Artists Over Time</div>
+        <div class="slide-title">
+            {% if language == "english" %}
+                Your Top 3 Artists Over Time
+            {% elif language == "hindi" %}
+                समय के साथ आपके शीर्ष 3 कलाकार
+            {% elif language == "mandarin" %}
+                随时间推移的前三名艺术家
+            {% endif %}
+        </div>
         <div class="chart-and-artists">
             <canvas id="artistRankings" style="width:100%;max-width:1000px"></canvas>
             <script>
@@ -200,7 +208,9 @@
                 const artist2 = artists[1];
                 const artist3 = artists[2];
 
-                const xValues = [["over the", "last year"], ["over the last", "six months"], ["over the", "last month"]];
+                const xValues = JSON.parse('{{ time_labels | escapejs }}');
+                const rankingLabel = '{{ ranking_label | escapejs }}';
+                let artistRankings;
 
                 const datasets = [
                     {
@@ -212,7 +222,7 @@
                     {
                         label: artist2,
                         data: top3Artists[artist2],
-                        borderColor: "99dd71",
+                        borderColor: "#DDC371",
                         fill: false,
                     },
                     {
@@ -224,7 +234,7 @@
                 ];
 
                 document.addEventListener("DOMContentLoaded", function() {
-                new Chart("artistRankings", {
+                artistRankings = new Chart("artistRankings", {
                     type: "line",
                     data: {
                         labels: xValues,
@@ -254,7 +264,7 @@
                                 },
                                 scaleLabel: {
                                     display: true,
-                                    labelString: "Ranking",
+                                    labelString: rankingLabel,
                                     fontFamily: 'Notable',
                                     fontColor: dark_mode ? "#a8a6a6" : "#473924",
                                     fontSize: 21,
@@ -274,9 +284,46 @@
                         }
                     }
                 });
-
-                // on button click change the axes colors
             })
+
+            document.getElementById('dark-mode-btn').onclick = function () {
+                document.body.classList.toggle('dark-mode');
+
+                if (document.body.classList.contains('dark-mode')) {
+                    localStorage.setItem('dark_mode', 'on');
+                    console.log('dark mode on');
+                } else {
+                    localStorage.setItem('dark_mode', 'off');
+                    console.log("dark mode off");
+                    console.log(localStorage.getItem('dark_mode'));
+                }
+
+                const rainbows = document.getElementsByClassName('rainbow');
+                const dark_mode = localStorage.getItem('dark_mode') === 'on';
+                if (dark_mode) {
+                    for (let i = 0; i < rainbows.length; i++) {
+                        rainbows[i].src = "{% static 'slide_2/dark_mode_rainbow.png' %}";
+                    }
+
+                    artistRankings.options.scales.xAxes[0].ticks.fontColor = '#a8a6a6';
+                    artistRankings.options.scales.xAxes[0].gridLines.color = '#a8a6a6';
+                    artistRankings.options.scales.yAxes[0].ticks.fontColor ='#a8a6a6';
+                    artistRankings.options.scales.yAxes[0].gridLines.color = '#a8a6a6';
+                    artistRankings.options.scales.yAxes[0].scaleLabel.fontColor = '#a8a6a6';
+                } else {
+                    for (let i = 0; i < rainbows.length; i++) {
+                        rainbows[i].src = "{% static 'slide_2/top_left_corner_rainbow.png' %}";
+                    }
+
+                    artistRankings.options.scales.xAxes[0].ticks.fontColor = "#473924";
+                    artistRankings.options.scales.xAxes[0].gridLines.color = "#473924";
+                    artistRankings.options.scales.yAxes[0].ticks.fontColor ="#473924";
+                    artistRankings.options.scales.yAxes[0].gridLines.color = "#473924";
+                    artistRankings.options.scales.yAxes[0].scaleLabel.fontColor = "#473924";
+                }
+
+                artistRankings.update();
+            };
             </script>
 
             <div class="chart-legend">
