Added deprecating text to audio features

--- a/templates/christmasone.html
+++ b/templates/christmasone.html
@@ -384,6 +384,10 @@
         </h1>
     </div>
 
+    <p>
+        (The audio feature has been deprecated)
+    </p>
+
     <!-- Content Sections for Top Artist and Top Songs -->
     <div class="content-sections">
         <!-- Top Artist Section on the Left -->
