--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -41,6 +41,10 @@
             overflow: hidden;
         }
 
+        p2 {
+        color: #c4b3ff;
+        }
+
         .top-left {
            position: absolute;
            top: -50px;
@@ -320,6 +324,10 @@
             {% endif %}
         </h1>
     </div>
+
+    <p2>
+        (The audio feature has been deprecated)
+    </p2>
 
     <!-- Content Sections for Top Artist and Top Songs -->
     <div class="content-sections">
