--- a/templates/halloween_seasonal.html
+++ b/templates/halloween_seasonal.html
@@ -369,9 +369,9 @@
                 {% if language == "english" %}
                     & EXAMPLES OF SOME OF
                 {% elif language == "hindi" %}
-                    और कुछ उदाहरण
+                    और कुछ उदाहरण आपके पसंदीदा गानों के
                 {% elif language == "mandarin" %}
-                    以及一些
+                    以及一些您最喜欢的歌曲
                 {% endif %}
             </textPath>
         </text>
@@ -381,9 +381,9 @@
                 {% if language == "english" %}
                     YOUR FAVORITE SONGS
                 {% elif language == "hindi" %}
-                    आपके पसंदीदा गानों के
+
                 {% elif language == "mandarin" %}
-                    您最喜欢的歌曲
+
                 {% endif %}
             </textPath>
         </text>
