--- a/templates/contact.html
+++ b/templates/contact.html
@@ -425,6 +425,11 @@
                 <div id="submit_feedback_form" class="form-container">
                     <br>
 
+                    <label for="email">Your Email:&nbsp;&nbsp;&nbsp;</label>
+                    <textarea id="email" name="email" rows="1" cols="40" placeholder="Enter your email address"></textarea>
+
+                    <br><br>
+
                     <label for="rating">How would you rate our web app? (from 1 to 5):&nbsp;&nbsp;&nbsp;</label>
                     <input type="number" id="rating" name="rating" min="1" max="5">
 
