--- a/templates/past_wraps.html
+++ b/templates/past_wraps.html
@@ -168,6 +168,10 @@
             align-content: center;
         }
 
+        .wrap:hover {
+            cursor: pointer;
+        }
+
 
 
     </style>
@@ -180,7 +184,7 @@
     {% if num_wraps > 0 %}
         <div id="horizontal-timeline"></div>
 
-        <div class="wrap0" onclick="showWrap(0)">
+        <div class="wrap0 wrap" onclick="showWrap(0)">
             <div class="vertical-line" id="line1"></div>
             <img src="{% static 'past_wraps/salmon_record.png' %}" class="record" id="record1">
             <h2 id="text1">{{wrap_list.0.words|safe}}</h2>
@@ -190,7 +194,7 @@
     {% endif %}
 
     {% if num_wraps > 1 %}
-    <div class="wrap1" onclick="showWrap(1)">
+    <div class="wrap1 wrap" onclick="showWrap(1)">
         <div class="vertical-line" id="line2"></div>
         <img src="{% static 'past_wraps/teal_record.png' %}" class="record" id="record2">
         <h2 id="text2">{{wrap_list.1.words|safe}}</h2>
@@ -199,7 +203,7 @@
 
 
     {% if num_wraps > 2 %}
-    <div class="wrap2" onclick="showWrap(2)">
+    <div class="wrap2 wrap" onclick="showWrap(2)">
         <div class="vertical-line" id="line3"></div>
         <img src="{% static 'past_wraps/gold_record.png' %}" class="record" id="record3">
         <h2 id="text3">{{wrap_list.2.words|safe}}</h2>
@@ -207,7 +211,7 @@
     {% endif %}
 
     {% if num_wraps > 3 %}
-    <div class="wrap3" onclick="showWrap(3)">
+    <div class="wrap3 wrap" onclick="showWrap(3)">
         <div class="vertical-line" id="line4"></div>
         <img src="{% static 'past_wraps/salmon_record.png' %}" class="record" id="record4">
         <h2 id="text4">{{wrap_list.3.words|safe}}</h2>
