--- a/templates/profile.html
+++ b/templates/profile.html
@@ -442,7 +442,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <a href="{% url 'set_theme_from_profile' %}" style="text-decoration: none;">
+                <a href="{% url 'slide_2' %}" style="text-decoration: none;">
                 <div class="jukebox turquoise">
                     <div class="jukebox-top">
                         <div class="record-window">
