--- a/templates/contact.html
+++ b/templates/contact.html
@@ -416,6 +416,11 @@
     </div>
 
     <div class="contactContainer" id="feedback-section">
+        {% if messages %}
+            {% for message in messages %}
+                <p class="message">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
 
         <h3>We'd Love To Hear From You!</h3>
             <div class='alignment'>
