--- a/templates/past_wraps.html
+++ b/templates/past_wraps.html
@@ -172,7 +172,9 @@
             cursor: pointer;
         }
 
-
+        #back-button:hover, #forward-button:hover {
+            cursor: pointer
+        }
 
     </style>
 
