dark mode for summary & past wraps, fix language for llm pages, start translations for deprecation messages

--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -326,7 +326,13 @@
     </div>
 
     <p2>
-        (The audio feature has been deprecated)
+        {% if language == "english" %}
+            (The audio feature has been deprecated)
+        {% elif language == "hindi" %}
+            (ऑडियो फीचर बंद कर दिया गया है)
+        {% elif language == "mandarin" %}
+            (音频功能已被抑制)
+        {% endif %}
     </p2>
 
     <!-- Content Sections for Top Artist and Top Songs -->
