--- a/templates/past_wraps.html
+++ b/templates/past_wraps.html
@@ -56,6 +56,14 @@
            position: absolute;
        }
 
+       body.dark-mode #horizontal-timeline {
+           background-color: #FCF8F1;
+       }
+
+       body.dark-mode .vertical-line {
+           background-color: #FCF8F1;
+       }
+
        #line1 {
            top: calc(55% - 80px);
            left: 20%;
