--- a/templates/summary.html
+++ b/templates/summary.html
@@ -57,6 +57,10 @@
             justify-items: center;
         }
 
+        body.dark-mode .page-title {
+            color: #DDC371;
+        }
+
         .record-image {
             width: 350px;
             height: 350px;
@@ -81,7 +85,7 @@
         }
 
         .dark-mode .song-text-song {
-            color: #E0E0E0;
+            color: #EF6E53;
         }
 
         .song-text-artist {
@@ -122,6 +126,10 @@
           color: #473924;
           font-size: 26px;
           margin-top: 30px;
+        }
+
+        body.dark-mode .label {
+            color: white;
         }
 
         .left-section, .right-section {
@@ -166,6 +174,10 @@
           margin-top: 10px;
           font-size: 20px;
           gap: 15px;
+        }
+
+        body.dark-mode .mood {
+            color: #EF6E53;
         }
 
         #artist-label {
