--- a/templates/halloween_TransitionTwo.html
+++ b/templates/halloween_TransitionTwo.html
@@ -55,7 +55,13 @@
         margin-left: 0px;
         margin-top: 100px;
         min-height: 100vh;
-        background-image: url("{% static 'transition_slide/transitionTwo.png' %}");
+        {% if language == 'english' %}
+            background-image: url("{% static 'transition_slide/transitionTwo.png' %}");
+        {% elif language == 'hindi' %}
+            background-image: url("{% static 'transition_slide/hindiTransitionTwo.png' %}");
+        {% elif language == 'mandarin' %}
+            background-image: url("{% static 'transition_slide/mandarinTransitionTwo.png' %}");
+        {% endif %}
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center 20%;
@@ -64,7 +70,13 @@
     }
 
     body.dark-mode .container {
-        background-image: url("{% static 'transition_slide/transitionTwoDark.png' %}");
+        {% if language == 'english' %}
+            background-image: url("{% static 'transition_slide/transitionTwoDark.png' %}");
+        {% elif language == 'hindi' %}
+            background-image: url("{% static 'transition_slide/hindiTransitionTwoDark.png' %}");
+        {% elif language == 'mandarin' %}
+            background-image: url("{% static 'transition_slide/mandarinTransitionTwoDark.png' %}");
+        {% endif %}
     }
 
     @keyframes fadeIn {
@@ -110,7 +122,23 @@
 </style>
 
 <div class="button-container">
-    <a href="{% url 'home' %}" class="button">Go Home</a>
-    <a href="{% url 'game' %}" class="button">Play Game</a>
+    <a href="{% url 'home' %}" class="button">
+        {% if language == 'english' %}
+            Go Home
+        {% elif language == 'hindi' %}
+            घर जाओ
+        {% elif language == 'mandarin' %}
+            回家
+        {% endif %}
+    </a>
+    <a href="{% url 'game' %}" class="button">
+        {% if language == 'english' %}
+            Play Game
+        {% elif language == 'hindi' %}
+            खेल खेलो
+        {% elif language == 'mandarin' %}
+            玩遊戲
+        {% endif %}
+    </a>
 </div>
 {% endblock %}
