--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,6 +17,7 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
         .container {
             width: 100%;
@@ -108,6 +109,8 @@
             border-radius: 12px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin-left: 110px;
+            margin-top: -40px;
         }
         .jukebox:hover {
             transform: scale(1.05);
@@ -442,6 +445,8 @@
                         {% endif %}
                     </div>
                 </div>
+
+                <!--
                 <a href="{% url 'slide_2' %}" style="text-decoration: none;">
                 <div class="jukebox turquoise">
                     <div class="jukebox-top">
@@ -464,6 +469,7 @@
                         {% endif %}
                     </div> 
                 </div>
+                                -->
                 </a>
             </div>
         </div>
