added summary to sidebar

--- a/templates/base.html
+++ b/templates/base.html
@@ -309,6 +309,7 @@
                 <a href="{% url 'ads_minutes' %}">Analyzing Ads</a>
                 <a href="{% url 'llm_insights_page' %}">Insights</a>
                 <a href="{% url 'game' %}">Game</a>
+                <a href="{% url 'summary' %}">Summary</a>
                 <hr>
                 <a href="{% url 'contact' %}">Contact</a>
                 <a href="{% url 'profile' %}">Profile</a>
@@ -323,6 +324,7 @@
                 <a href="{% url 'ads_minutes' %}">विज्ञापनों का विश्लेषण</a>
                 <a href="{% url 'llm_insights_page' %}">अंतर्दृष्टि</a>
                 <a href="{% url 'game' %}">खेल</a>
+                <a href="{% url 'summary' %}">सारांश</a>
                 <hr>
                 <a href="{% url 'contact' %}">संपर्क करें</a>
                 <a href="{% url 'profile' %}">प्रोफ़ाइल</a>
@@ -337,6 +339,7 @@
                 <a href="{% url 'ads_minutes' %}">广告分析</a>
                 <a href="{% url 'llm_insights_page' %}">见解</a>
                 <a href="{% url 'game' %}">游戏</a>
+                <a href="{% url 'summary' %}">摘要</a>
                 <hr>
                 <a href="{% url 'contact' %}">联系</a>
                 <a href="{% url 'profile' %}">个人资料</a>
