added summary slides to slide reel

--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -298,7 +298,7 @@
         </div>
     </div>
     
-    <a href="{% url 'christmas_transition_two' %}">
+    <a href="{% url 'summary' %}">
         <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
     </a>
 
@@ -310,6 +310,7 @@
         <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="darker-small-circle"></div>
+        <div class="small-circle"></div>
     </div>
 
     <a href="{% url 'christmas_ads' %}">
