--- a/templates/halloween_llm.html
+++ b/templates/halloween_llm.html
@@ -300,7 +300,7 @@
         </div>
     </div>
 
-    <a href="{% url 'halloween_transition_two' %}">
+    <a href="{% url 'summary' %}">
         <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
     </a>
 
@@ -312,6 +312,7 @@
         <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="darker-small-circle"></div>
+        <div class="small-circle"></div>
     </div>
 
     <a href="{% url 'ads_minutes' %}">
