--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -252,7 +252,7 @@
         </div>
     </div>
 
-    <a href="{% url 'transition_two' %}">
+    <a href="{% url 'summary' %}">
         <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
     </a>
 
@@ -264,6 +264,7 @@
         <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="darker-small-circle"></div>
+        <div class="small-circle"></div>
     </div>
 
     <a href="{% url 'ads_minutes' %}">
