--- a/templates/ads_minutes.html
+++ b/templates/ads_minutes.html
@@ -173,6 +173,7 @@
             <div class="small-circle"></div>
             <div class="darker-small-circle"></div>
             <div class="small-circle"></div>
+            <div class="small-circle"></div>
         </div>
 
         <a href="{% url 'analyze_seasonal_mood' %}">
