--- a/templates/christmas_ads.html
+++ b/templates/christmas_ads.html
@@ -255,6 +255,7 @@
             <div class="small-circle"></div>
             <div class="darker-small-circle"></div>
             <div class="small-circle"></div>
+            <div class="small-circle"></div>
         </div>
 
         <a href="{% url 'analyze_seasonal_mood' %}">
