--- a/templates/christmas_night.html
+++ b/templates/christmas_night.html
@@ -458,12 +458,11 @@
                 <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
             </a>
 
-
-
             <div class="circle-container">
                 <div class="small-circle"></div>
                 <div class="small-circle"></div>
                 <div class="darker-small-circle"></div>
+                <div class="small-circle"></div>
                 <div class="small-circle"></div>
                 <div class="small-circle"></div>
                 <div class="small-circle"></div>
