--- a/templates/christmas_seasonal.html
+++ b/templates/christmas_seasonal.html
@@ -482,6 +482,7 @@
         <div class="darker-small-circle"></div>
         <div class="small-circle"></div>
         <div class="small-circle"></div>
+        <div class="small-circle"></div>
     </div>
 
     <a href="{% url 'slide_3' %}">
