--- a/templates/christmasone.html
+++ b/templates/christmasone.html
@@ -568,10 +568,8 @@
         <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="small-circle"></div>
+        <div class="small-circle"></div>
     </div>
-
-    <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
-
 
     <script>
         const language = "{{ language }}"
