--- a/templates/halloween_seasonal.html
+++ b/templates/halloween_seasonal.html
@@ -443,6 +443,7 @@
         <div class="darker-small-circle"></div>
         <div class="small-circle"></div>
         <div class="small-circle"></div>
+        <div class="small-circle"></div>
     </div>
 
     <a href="{% url 'slide_3' %}">
