--- a/templates/seasonalMood.html
+++ b/templates/seasonalMood.html
@@ -414,6 +414,7 @@
         <div class="darker-small-circle"></div>
         <div class="small-circle"></div>
         <div class="small-circle"></div>
+        <div class="small-circle"></div>
     </div>
 
     <a href="{% url 'slide_3' %}">
