--- a/templates/halloween_summary.html
+++ b/templates/halloween_summary.html
@@ -185,7 +185,7 @@
         }
 
         body.dark-mode .mood {
-            color: color: #bc2605;;
+            color: #bc2605;;
         }
 
         #artist-label {
