--- a/templates/christmas_summary.html
+++ b/templates/christmas_summary.html
@@ -478,20 +478,23 @@
     </div>
 
 
-    <a href="{% url 'slide_2' %}">
+    <a href="{% url 'transition_two' %}">
         <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
     </a>
 
     <div class="circle-container">
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
         <div class="darker-small-circle"></div>
-        <div class="small-circle"></div>
-        <div class="small-circle"></div>
-        <div class="small-circle"></div>
-        <div class="small-circle"></div>
-        <div class="small-circle"></div>
     </div>
 
-    <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
+    <a href="{% url 'llm_insights_page' %}">
+      <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
+    </a>
 
 
     <script>
