updated dark mode.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -318,7 +318,7 @@
 
 body.dark-mode .styled-email {
     border:  2px #c4b3ff solid;
-    background-color:  #ded4fb;
+    background-color:  white;
 
 }
 
@@ -562,7 +562,7 @@ body.dark-mode .styled-email {
                         {% endif %}
                     </label>
                     <br><br>
-                    <input type="email" id="email" class="data-field email-field styled-email" placeholder="{% if language == 'english' %}Write your feedback here{% elif language == 'hindi' %}अपनी प्रतिक्रिया यहां लिखें{% elif language == 'mandarin' %}在这里写下您的反馈{% endif %}">
+                    <input type="email" id="email" class="data-field email-field styled-email" placeholder="{% if language == 'english' %}Your Email{% elif language == 'hindi' %}आपका ईमेल{% elif language == 'mandarin' %}您的电子邮件{% endif %}">
 
                     <br><br>
 
